--- a/css/styles.css
+++ b/css/styles.css
@@ -127,16 +127,19 @@ body {
 } */
 
 .site-nav {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-
-  color: var(--title-text-color);
-
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: var(--title-text-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav:hover,
@@ -163,6 +166,10 @@ body {
   gap: 10px;
   padding-top: 32px;
   padding-bottom: 32px;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact:hover,
@@ -191,27 +198,20 @@ body {
 }
 
 .hero-title {
-  margin-bottom: 30px;
-  max-width: 696px;
-  margin-left: auto;
-  margin-right: auto;
-
-  color: var(--super-waite);
-
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-}
-.hero-btn {
-  display: inline-block;
-  padding: 10px 32px;
-  min-width: 216px;
 
   color: var(--super-waite);
-  background-color: var(--accent-color);
 
+  margin-bottom: 30px;
+  max-width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.hero-btn {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -220,6 +220,16 @@ body {
   letter-spacing: 0.06em;
   border-radius: 4px;
   border: transparent;
+
+  color: var(--super-waite);
+  background-color: var(--accent-color);
+
+  display: inline-block;
+  padding: 10px 32px;
+  min-width: 216px;
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -303,6 +313,10 @@ body {
   height: 44px;
   background-color: var(--super-waite);
   border-radius: 50%;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-link:hover,
 .team-link:focus {
@@ -315,6 +329,10 @@ body {
 
 .social-networks {
   fill: #afb1b8;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-card {
@@ -376,9 +394,17 @@ body {
   height: 92px;
   border: 1px solid var(--border-clients);
   border-radius: 4px;
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-clients {
   fill: #afb1b8;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover,
 .clients-link:focus {
@@ -391,12 +417,13 @@ body {
 
 /* ------------------------footer----------------------------- */
 .logo-footer {
-  color: var(--super-waite);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  color: var(--super-waite);
+
   display: inline-block;
   margin-bottom: 20px;
 }
@@ -425,12 +452,16 @@ body {
 }
 .contact-footer {
   font-style: normal;
-  color: var(--color-contact);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  color: var(--color-contact);
 
   display: inline-block;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-footer:hover,
 .contact-footer:focus {
@@ -450,6 +481,10 @@ body {
   border-radius: 50%;
   justify-content: center;
   align-items: center;
+
+  transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-soc-logo:hover,
 .footer-soc-logo:focus {
@@ -479,20 +514,24 @@ body {
   margin-bottom: 50px;
 }
 .btn-filter {
-  min-width: 73px;
-  display: inline-block;
-  padding: 6px 22px;
-
   font-family: inherit;
-  background-color: var(--bng-section-team);
-  color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
+
+  background-color: var(--bng-section-team);
+  color: var(--title-text-color);
+
+  min-width: 73px;
+  display: inline-block;
+  padding: 6px 22px;
   cursor: pointer;
   border-radius: 4px;
   border: transparent;
+  transition-property: color, background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-filter:hover,
@@ -510,15 +549,47 @@ body {
 }
 .project-item {
   background-color: var(--super-waite);
+  width: 370px;
 }
 .project-link {
   display: block;
+
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-link:hover,
 .project-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.overlay-box {
+  position: relative;
+  overflow: hidden;
+}
+.project-text-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  background: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition-property: transform translate;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: auto;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+.project-link:hover .project-text-overlay {
+  transform: translateY(0);
 }
 
 .item-portfolio {
