goit-markup-hw-05

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,7 @@ body {
 .list {
   list-style: none;
 }
+
 /* -------------logo--------------------------- */
 .logo {
   color: var(--super-blask);
@@ -125,6 +126,15 @@ body {
 /* .nav .item + .item {
   margin-left: 50px;
 } */
+.underline::after {
+  content: '';
+  display: inline-block;
+
+  width: 48px;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+}
 
 .site-nav {
   font-weight: 500;
@@ -132,10 +142,13 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  display: block;
+  /* display: block; */
   padding-top: 32px;
   padding-bottom: 32px;
+
   color: var(--title-text-color);
+  display: flex;
+  flex-direction: column;
 
   transition-property: color;
   transition-duration: 250ms;
@@ -277,10 +290,7 @@ body {
   padding-top: 47px;
   padding-bottom: 94px;
 }
-.work-list {
-  display: flex;
-  gap: 30px;
-}
+
 .work-title {
   font-size: 36px;
   line-height: 1.16;
@@ -289,6 +299,34 @@ body {
   color: var(--title-text-color);
 
   margin-bottom: 50px;
+}
+
+.work-list {
+  display: flex;
+  gap: 30px;
+}
+
+.work-box {
+  position: relative;
+}
+.work-box-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+
+  background: rgba(47, 48, 58, 0.8);
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 370px;
+  height: 70px;
+  padding: 27px 107px;
+  overflow: auto;
 }
 /* --------------------section-team----------------------------- */
 .section-team {
@@ -569,6 +607,12 @@ body {
   overflow: hidden;
 }
 .project-text-overlay {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+
   position: absolute;
   top: 0;
   left: 0;
@@ -581,12 +625,6 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
-
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
-  color: #ffffff;
 }
 .project-link:hover .project-text-overlay {
   transform: translateY(0);
@@ -611,4 +649,56 @@ body {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--text-color);
+}
+/* ---------------------modal-------------------------------------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  transform: opacity 300ms liner, visibility 300ms liner;
+  /* transition-property: opacity, visibility;
+  transition-duration: 300ms;
+  transition-timing-function: linear; */
+}
+.modal {
+  width: 528px;
+  min-height: 581px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scaleX(1);
+  transition: transform 300ms linear;
+}
+.backdrop.is-hidden.modal {
+  transform: translate(-50%, -50%) scaleX(0);
+  /* transform: rotate(55deg); */
+}
+.modal-btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  padding: 0;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
