--- a/css/styles.css
+++ b/css/styles.css
@@ -126,21 +126,14 @@ body {
 /* .nav .item + .item {
   margin-left: 50px;
 } */
-.underline::after {
-  content: '';
-  display: inline-block;
-
-  width: 48px;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-}
 
 .site-nav {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  position: relative;
 
   /* display: block; */
   padding-top: 32px;
@@ -158,6 +151,19 @@ body {
 .site-nav:hover,
 .site-nav:focus {
   color: var(--accent-color);
+}
+.underline::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  bottom: -1px;
+  left: 0;
+  padding: 0;
+
+  background: #2196f3;
+  border-radius: 2px;
 }
 
 /* -------------------------------contacts----------------- */
@@ -621,7 +627,7 @@ body {
   padding: 63px 24px;
   background: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
-  transition-property: transform translate;
+  transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
@@ -655,16 +661,15 @@ body {
 .backdrop {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
-  transform: opacity 300ms liner, visibility 300ms liner;
-  /* transition-property: opacity, visibility;
-  transition-duration: 300ms;
-  transition-timing-function: linear; */
+  opacity: 1;
+  transition: opacity 250ms linear, visibility 250ms linear;
 }
 .modal {
-  width: 528px;
+  min-width: 528px;
   min-height: 581px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -673,13 +678,15 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scaleX(1);
-  transition: transform 300ms linear;
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms linear;
 }
+
 .backdrop.is-hidden.modal {
-  transform: translate(-50%, -50%) scaleX(0);
-  /* transform: rotate(55deg); */
+  transform: translate(-50%, -50%) scale(0.9);
 }
+
 .modal-btn {
   width: 30px;
   height: 30px;
@@ -697,7 +704,7 @@ body {
   justify-content: center;
 }
 
-.is-hidden {
+.backdrop.is-hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
