--- a/css/styles.css
+++ b/css/styles.css
@@ -322,6 +322,11 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   color: #ffffff;
 
   background: rgba(47, 48, 58, 0.8);
@@ -331,8 +336,6 @@ body {
   left: 0;
   width: 370px;
   height: 70px;
-  padding: 27px 107px;
-  overflow: auto;
 }
 /* --------------------section-team----------------------------- */
 .section-team {
@@ -357,26 +360,20 @@ body {
   height: 44px;
   background-color: var(--super-waite);
   border-radius: 50%;
+  color: #afb1b8;
 
-  transition-property: background-color;
+  transition-property: background-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-link:hover,
 .team-link:focus {
   background-color: var(--accent-color);
-}
-.team-link:hover .social-networks,
-.team-link:focus .social-networks {
-  fill: var(--super-waite);
+  color: var(--super-waite);
 }
 
 .social-networks {
-  fill: #afb1b8;
-
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  fill: currentColor;
 }
 
 .team-card {
@@ -666,7 +663,8 @@ body {
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity 250ms linear, visibility 250ms linear;
+  transition: opacity 250ms cubic-bezier(0.3, 0, 0.02, 1.13),
+    visibility 250ms cubic-bezier(0.3, 0, 0.02, 1.13);
 }
 .modal {
   min-width: 528px;
@@ -680,7 +678,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.3, 0, 0.02, 1.13);
 }
 
 .backdrop.is-hidden.modal {
